# hemlock

./: AUTHORS.md  CMakeLists.txt  LICENSE  README.md
cmake/: FindSQLite3.cmake
src/: CMakeLists.txt
src/hemlock-core/: CMakeLists.txt  arguement.c  arguement.h  config.h.in  database.c  database.h  database_core.c  database_core.h  insert.c  insert.h  main.c  mode.c  mode.h  mode_template.c  mode_template.h  remove.c  remove.h  settings.c  settings.h  string_utils.c  string_utils.h
